# porkbun-rs

./: Cargo.toml  README.md  build.rs  release.sh
.github/workflows/: rust.yml
src/: cli.rs  client.rs  errors.rs  lib.rs  main.rs  porkbunn_client.rs  serde_ext.rs
