[package]
name = "porkbun-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Ankur Srivastava"]
description = "A Rust cli and library for Porkbun API"
repository = "https://github.com/ansrivas/porkbun-rs"
readme = "README.md"


[features]
debug = []

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env"] }
reqwest = { version = "0.12.5", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
openssl = { version = "0.10", features = ["vendored"] }
clap_complete = "4.5.8"
dotenvy = "0.15.7"

[build-dependencies]
chrono = "0.4.38"
