[package]
name = "porkbun-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Ankur Srivastava"]
description = "A Rust cli and library for Porkbun API"
repository = "https://github.com/ansrivas/porkbun-rs"
readme = "README.md"


[features]
debug = []

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
openssl = { version = "0.10", features = ["vendored"] }
clap_complete = "4"
dotenvy = "0.15"

[build-dependencies]
chrono = "0.4"
